overflow-x solved

--- a/public/style.css
+++ b/public/style.css
@@ -12,4 +12,8 @@ body {
     color: white;
     overflow: hidden;
     overflow-y: scroll;
+    overflow-x: hidden;
+}
+html{
+    overflow-x: hidden;
 }
