--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -57,17 +57,19 @@
 }
 
 @media screen and (max-width:768px) {
-    .bg{
-        right: -70vw;
-        padding: 50px;
-        margin-top: 100px;
-        
-       
+    .bg {
+        position: absolute;
+        top: 0; /* Adjust if necessary */
+        right: 0; /* Reset or adjust this value to ensure it doesn't create horizontal overflow */
+        width: 100vw; /* Ensure it does not exceed the viewport width */
+        height: auto; /* Maintain aspect ratio */
+        object-fit: cover; /* Cover the designated area without stretching */
+        z-index: -1;
     }
-    .introContent{
-        font-size: 10vw;
+    .introContent {
+        font-size: 5vw; /* Adjust based on your design needs */
     }
-    .hello{
+    .hello {
         font-size: 4.5vw;
     }
 }
